run tests inside the docker container

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -2,9 +2,9 @@ version: "3.1"
 
 services:
   redmine:
-    image: redmine:4.1.1
-#    build:
-#      context: .
+#    image: redmine:4.1.1
+    build:
+      context: .
     restart: always
     ports:
     - 3000:3000
