--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -11,13 +11,13 @@ services:
     volumes:
     - ../:/usr/src/redmine/plugins/redmine_extended_rest_api
     environment:
-      REDMINE_DB_MYSQL: db
-      REDMINE_DB_PASSWORD: example
-      REDMINE_SECRET_KEY_BASE: supersecretkey
-      RAILS_ENV: test
-  db:
-    image: mysql:5.7
+      REDMINE_DB_POSTGRES: postgresql
+      REDMINE_DB_USERNAME: testuser
+      REDMINE_DB_PASSWORD: testpw
+  postgresql:
+    image: postgres:12.5-alpine
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: redmine
+      POSTGRES_USER: testuser
+      POSTGRES_PASSWORD: testpwd
+      POSTGRES_DB: redmine
