--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3.1"
 services:
   postgresql:
     image: postgres:12.5-alpine
+    container_name: postgresql
     environment:
       POSTGRES_USER: testuser
       POSTGRES_PASSWORD: testpwd
