use namespaces for routing #1

--- a/test/fixtures/trackers.yml
+++ b/test/fixtures/trackers.yml
@@ -19,3 +19,9 @@ trackers_003:
   is_in_chlog: false
   default_status_id: 1
   position: 3
+trackers_004:
+  name: Bug Request
+  id: 4
+  is_in_chlog: false
+  default_status_id: 55
+  position: 4
