--- a/src/test/fixtures/workflows.yml
+++ b/src/test/fixtures/workflows.yml
@@ -1,18 +1,22 @@
 ---
-users_001:
-  created_on: 2006-07-19 19:12:21 +02:00
-  status: 1
-  last_login_on: 2006-07-19 22:57:52 +02:00
-  language: de
-  # password = admin
-  salt: 82090c953c4a0000a7db253b0691a6b4
-  hashed_password: b5b6ff9543bf1387374cdfa27a54c96d236a7150
-  updated_on: 2006-07-19 22:57:52 +02:00
-  admin: true
-  lastname: Admin
-  firstname: Redmine
+WorkflowTransitions_122:
+  new_status_id: 5
+  role_id: 1
+  old_status_id: 2
+  id: 189
+  tracker_id: 3
+  type: WorkflowTransition
+WorkflowTransitions_133:
+  new_status_id: 2
+  role_id: 1
+  old_status_id: 1
   id: 1
-  auth_source_id:
-  mail_notification: all
-  login: admin
-  type: User
+  tracker_id: 1
+  type: WorkflowTransition
+WorkflowTransitions_144:
+  new_status_id: 3
+  role_id: 1
+  old_status_id: 1
+  id: 2
+  tracker_id: 1
+  type: WorkflowTransition
