--- a/src/test/fixtures/users.yml
+++ b/src/test/fixtures/users.yml
@@ -16,3 +16,20 @@ users_001:
   mail_notification: all
   login: admin
   type: User
+users_002:
+  created_on: 2006-07-19 19:12:21 +02:00
+  status: 1
+  last_login_on: 2006-07-19 22:57:52 +02:00
+  language: de
+  # password = admin
+  salt: 82090c953c4a0000a7db253b0691a6b4
+  hashed_password: b5b6ff9543bf1387374cdfa27a54c96d236a7150
+  updated_on: 2006-07-19 22:57:52 +02:00
+  admin: false
+  lastname: User
+  firstname: Redmine
+  id: 2
+  auth_source_id:
+  mail_notification: all
+  login: user
+  type: User
